fix footer spacing
- remove margin bottom from footer

--- a/app/assets/stylesheets/main_pages.css.scss
+++ b/app/assets/stylesheets/main_pages.css.scss
@@ -18,3 +18,7 @@ html, body {
   width: 100%;
   height: 3em;
 }
+
+#margin-fix {
+  margin-bottom: 0;
+}
